# ACEM

./: CMakeLists.txt  README.md  dgemm_example.c  i.txt  j.txt  matlab.mat  partition.txt  v.txt
.cache/clangd/index/: system.cc.21626BE170F9A51E.idx  system.hh.27D606D6EF872188.idx  test.cc.995E9DBED0849BC1.idx  test.cc.C1CF2A43309DB270.idx
HelloOpenMP/: CMakeLists.txt  HelloOpenMP  HelloOpenMP.c  looplevel.c  malloc2D.c  malloc2D.h  stream_traid.c  test  timer.c  timer.h
data/: b.txt  i.txt  j.txt  v.txt
help/: metisExample.cc
src/: CMakeLists.txt  example.cc  myTest.cc  poisson2d.cc  system.cc  system.hh  system.hpp  test.cc  testc.cc  tqdm.hh
testEigen/: CMakeLists.txt  system.cc  system.hh  test.cc
testPy/: test.py  testEigen.py  testSPD.py
tqdm/: tqdm.h  utils.h
visual/: test.py
