find_package(OpenMP REQUIRED)
add_executable(test HelloOpenMP.c)
if(OpenMP_CXX_FOUND)
    message("======${OpenMP_CXX_FLAGS}======")
    message("======${OpenMP_CXX_LIBRARIES}======")
    target_compile_options(test PRIVATE ${OpenMP_CXX_FLAGS})  
    target_link_libraries(test PRIVATE ${OpenMP_CXX_LIBRARIES}) 
endif()